--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/setting.yml
@@ -184,9 +184,9 @@ BossDefeatTime:
   史莱姆皇后: 2400
   极地之灵: 3600
   双子魔眼: 3600
-  硫磺火元素: 3600
-  毁灭者: 3600
   渊海灾虫: 2400
+  毁灭者: 3600
+  硫磺火元素: 3600
   机械骷髅王: 3600
   灾厄之眼: 4800
   世纪之花: 3600
@@ -202,7 +202,7 @@ BossDefeatTime:
   月球领主: 4800
   亵渎守卫: 1800
   痴愚金龙: 2400
-  亵渎天神: 4800
+  亵渎天神，普罗维登斯: 4800
   无尽虚空: 3600
   风暴编织者: 2700
   神之使徒西格纳斯: 2400
