--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/plugin_development/TerrariaHelper/pom.xml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/plugin_development/TerrariaHelper/pom.xml
@@ -84,5 +84,11 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/essentials/EssentialsX-2.18.2.0.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
