--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
@@ -117,6 +117,12 @@
     noGravityTicks: 99999
     buffInflict:
         - "咒火|100|1"
+血化深渊之球:
+    penetration: 99999
+    blockHitAction: thru
+黑檀深渊之球:
+    penetration: 99999
+    blockHitAction: thru
 天蓝羽毛:
     autoTrace: true
     blastRadius: 2
