the slime god config file

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
@@ -372,6 +372,11 @@
         - "剧毒"
     drop:
         - "铜币:30000:30000:1"
+史莱姆之神:
+    buffInflict:
+        - "扭曲|50|0.5"
+    buffImmute:
+        - "中毒"
 血肉之墙:
     drop:
         - "强效治疗药水:2:4:1"
