--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/mobSpawning.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/mobSpawning.yml
@@ -264,7 +264,7 @@ mobInfo:
         monsterType: "SLIME"
         spawnLocationType: ANY
         variants:
-            陨石雨1:
+            default1:
                 attributes:
                     damage: 35
                     damageType: "Melee"
