--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
@@ -121,6 +121,7 @@
     penetration: 99999
     blockHitAction: thru
     projectileSize: 0.5
+    gravity: 0
     buffInflict:
         - "扭曲|60|0.3"
         - "流血|160|1"
@@ -128,6 +129,7 @@
     penetration: 99999
     blockHitAction: thru
     projectileSize: 0.5
+    gravity: 0
     buffInflict:
         - "扭曲|60|0.2"
         - "缓慢|50|1"
