--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
@@ -9,8 +9,6 @@
         - "中毒"
         - "剧毒"
     drop:
-        - "坠星:1:1:0.33"
-        - "陨星矿:1:3:0.5"
         - "铜币:100:200:1"
 恶魔之眼:
     drop:
@@ -372,6 +370,14 @@
         - "剧毒"
     drop:
         - "铜币:30000:30000:1"
+血化史莱姆:
+    buffInflict:
+        - "扭曲|100|0.5"
+        - "流血|300|1"
+黑檀史莱姆:
+    buffInflict:
+        - "扭曲|100|0.5"
+        - "缓慢|200|1"
 史莱姆之神:
     buffInflict:
         - "扭曲|50|0.5"
