cryogen and projectile config

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
@@ -385,6 +385,12 @@
         - "流血|100|0.5"
     buffImmute:
         - "中毒"
+极地之灵:
+    buffInflict:
+        - "霜火|100|1"
+        - "冷冻|50|1"
+    buffImmute:
+        - "霜火"
 血肉之墙:
     drop:
         - "强效治疗药水:2:4:1"
