--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
@@ -133,6 +133,36 @@
     buffInflict:
         - "扭曲|80|0.2"
         - "缓慢|50|1"
+冰霜爆:
+    penetration: 99999
+    blockHitAction: thru
+    gravity: 0
+    buffInflict:
+        - "霜火|40|1"
+        - "冷冻|30|1"
+冰锥:
+    penetration: 99999
+    blockHitAction: thru
+    projectileSize: 0.5
+    gravity: 0
+    buffInflict:
+        - "霜火|40|1"
+        - "冷冻|30|1"
+冰霜炸弹:
+    penetration: 99999
+    blockHitAction: thru
+    projectileSize: 0.5
+    speedMultiPerTick: 0.95
+    gravity: 0
+    buffInflict:
+        - "霜火|60|1"
+        - "冷冻|45|1"
+        - "冰冻|20|1"
+    clusterBomb:
+        amount: 32
+        damageMulti: 0.85
+        name: 冰锥
+        velocity: 2
 天蓝羽毛:
     autoTrace: true
     blastRadius: 2
