cryogen AI tweak, some bugfix

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
@@ -130,6 +130,7 @@
     blockHitAction: thru
     liveTime: 100
     gravity: 0
+    noAutoTraceTicks: 10
     buffInflict:
         - "霜火|40|1"
         - "冷冻|30|1"
