--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/hud_hotbar.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/hud_hotbar.yml
@@ -153,7 +153,8 @@ Functions:
   x: "(方法.玩家手持槽==0) ? 12 : 8"
   y: "12"
   identifier: "container_36"
-  
+  enable: false
+  drawBackground: false
 槽位2_slot:
   x: "(方法.玩家手持槽<1) ? 34 : ((方法.玩家手持槽==1) ? 30 : 26)"
   y: "12"
