--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/buff.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/buff.yml
@@ -17,6 +17,9 @@ buffConflicts:
     再生: 0
     生命力: 0
     心律和谐: 1
+  5:
+    燃烧: 0
+    黑曜石皮: 1
 
 effects:
   燃烧:
@@ -24,45 +27,64 @@ effects:
     isBuff: false
     damageInterval: 4
     damage: 1
-    tooltip: 孙哥我着火了
+    tooltip: 缓慢损失生命值
   霜火:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/d/dc/Frostburn
     isBuff: false
     damageInterval: 4
     damage: 2
+    tooltip: 不是特别烫就是特别冻。反正都是特别特别痛
   咒火:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/a/a0/Cursed_Inferno
     isBuff: false
     damageInterval: 5
     damage: 3
     damageMonster: 6
+    tooltip: 正在损失生命值
   暗影焰:
     isBuff: false
     damageInterval: 4
     damage: 3
+    tooltip: 正在损失生命值
+  辐射:
+    isBuff: false
+    damageInterval: 10
+    damage: 5
+    damageMonster: 10
+    attributes:
+      damageTakenMulti: 0.1
+      defence: -20
+      speedMulti: -0.1
+    tooltip: 你的皮肤正被侵蚀
   耐药性:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/8/83/Potion_Sickness
     isBuff: false
+    tooltip: 不能再使用治疗物品
   魔力疾病:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/9/93/Mana_Sickness
     isBuff: false
+    tooltip: 魔法伤害降低
   失明:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/c/c0/Darkness
     isBuff: false
+    tooltip: 视力下降
   阻塞:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/a/a5/Obstructed
     isBuff: false
+    tooltip: 你看不见了！
   弹药储备:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/c/c8/Ammo_Reservation
     isBuff: true
     attributes:
       ammoConsumptionRate: -0.2
+    tooltip: 20%概率不消耗弹药
   箭术:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/9/98/Archery
     isBuff: true
     attributes:
       projectileSpeedArrowMulti: 0.2
       damageArrowMulti: 0.1
+    tooltip: 箭矢伤害增加10%，箭矢速度增加20%
   战斗:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/7/70/Battle
     isBuff: true
@@ -70,89 +92,107 @@ effects:
       mobLimit: 10
       mobSpawnRate: 0.1
       mobSpawnRateMulti: 1.5
+    tooltip: 刷怪率和上限增加
   虫潮:
     icon: https://calamitymod.wiki.gg/images/5/5c/Zerg
     isBuff: true
     attributes:
       mobLimit: 5
       mobSpawnRate: 1
+    tooltip: 刷怪率和上限增加
   冷静:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/2/20/Calm
     isBuff: true
     attributes:
       mobLimit: -1
       mobSpawnRateMulti: -0.2
+    tooltip: 刷怪率和上限减少
   禅定:
     icon: https://calamitymod.wiki.gg/images/e/ee/Zen
     isBuff: true
     attributes:
       mobLimit: -2
       mobSpawnRate: -0.1
+    tooltip: 刷怪率和上限减少
   耐力:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/0/0a/Endurance
     isBuff: true
     attributes:
       damageTakenMulti: -0.05
+    tooltip: 伤害减免增加5%
   鱼鳃:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/f/fc/Gills
     isBuff: true
+    tooltip: 你能在水下呼吸了！
   隐身:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/e/e5/Invisibility
     isBuff: true
     attributes:
       mobLimit: -1
       mobSpawnRateMulti: -0.1
+    tooltip: 刷怪率和上限减少
   铁皮:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/3/3d/Ironskin
     isBuff: true
     attributes:
       defence: 16
+    tooltip: 获得 16 防御力
   生命力:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/9/98/Lifeforce
     isBuff: true
     attributes:
       healthMulti: 0.2
+    tooltip: 获得 20% 最大生命值
   魔能:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/c/cd/Magic_Power
     isBuff: true
     attributes:
       damageMagicMulti: 0.1
+    tooltip: 魔法伤害增加 10%
   魔力再生:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/7/77/Mana_Regeneration
     isBuff: true
     attributes:
       manaRegen: 10
+    tooltip: 魔力再生速度增加
   黑曜石皮:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/8/8d/Obsidian_Skin
     isBuff: true
+    tooltip: 免疫岩浆和燃烧
   再生:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/5/53/Regeneration
     isBuff: true
     attributes:
       regen: 4
+    tooltip: 生命再生增加
   召唤:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/1/18/Summoning_%28buff%29
     isBuff: true
     attributes:
       minionLimit: 1
+    tooltip: 召唤栏 +1
   敏捷:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/a/af/Swiftness
     isBuff: true
     attributes:
       speedMulti: 0.15
+    tooltip: 速度增加 15%
   荆棘:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/9/9e/Thorns
     isBuff: true
+    tooltip: 受伤时反弹部分伤害
   泰坦:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/8/88/Titan
     isBuff: true
     attributes:
       knockbackMulti: 0.5
+    tooltip: 击退增加 50%
   怒气:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/3/3f/Wrath
     isBuff: true
     attributes:
       damageMulti: 0.1
+    tooltip: 伤害增加 10%
   吃饱:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/a/a3/Well_Fed
     isBuff: true
@@ -163,6 +203,7 @@ effects:
       damageMulti: 0.05
       speedMulti: 0.05
       regen: 2
+    tooltip: 所有属性小幅提升
   饱足:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/2/2a/Plenty_Satisfied
     isBuff: true
@@ -173,6 +214,7 @@ effects:
       damageMulti: 0.075
       speedMulti: 0.075
       regen: 4
+    tooltip: 所有属性中幅提升
   饕餮:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/1/15/Exquisitely_Stuffed
     isBuff: true
@@ -183,83 +225,107 @@ effects:
       damageMulti: 0.1
       speedMulti: 0.1
       regen: 6
+    tooltip: 所有属性大幅提升
   流血:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/3/33/Bleeding
     isBuff: false
     attributes:
       regenMulti: -1
+    tooltip: 无法再生生命
   缓慢:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/f/f5/Slow
     isBuff: false
     attributes:
       speedMulti: -0.5
+    tooltip: 移动速度降低
   恐惧:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/0/0b/Horrified
     isBuff: false
+    tooltip: 你已经看到污秽之物，无可逃脱。
   中毒:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/1/11/Poisoned
     isBuff: false
     damageInterval: 10
     damage: 1
+    tooltip: 缓慢损失生命值
   剧毒:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/8/8a/Venom
     isBuff: false
     damageInterval: 4
     damage: 6
+    tooltip: 在酸性毒液的腐蚀下损失生命值
   破损盔甲:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/d/d5/Broken_Armor
     isBuff: false
     attributes:
       defenceMulti: -0.5
+    tooltip: 防御力减半
   诅咒:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/f/f0/Cursed
     isBuff: false
+    tooltip: 无法使用任何物品
   扭曲:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/d/db/Distorted
     isBuff: false
+    tooltip: 你周围的重力是扭曲的
   冷冻:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/a/a6/Chilled
     isBuff: false
     attributes:
       speedMulti: -0.5
+    tooltip: 你的移动速度已降低
   冰冻:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/8/86/Frozen
     isBuff: false
     attributes:
       speed: -10
+    tooltip: 你不能动！
   破晓:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/b/b5/Stardust_Dragon
     isBuff: false
     damageInterval: 5
     damage: 10
     damageMonster: 25
+    tooltip: 被日耀射线焚烧
   伤害星云:
     isBuff: true
     attributes:
       damageMulti: 0.075
+    tooltip: 每层使伤害增加 7.5%
   伤害星云1:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/3/3f/Wrath
+    tooltip: 伤害增加 7.5%
   伤害星云2:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/3/3f/Wrath
+    tooltip: 伤害增加 15%
   伤害星云3:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/3/3f/Wrath
+    tooltip: 伤害增加 22.5%
   生命星云:
     isBuff: true
     attributes:
       regen: 10
+    tooltip: 每层使每秒生命再生增加 10
   生命星云1:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/5/53/Regeneration
+    tooltip: 每秒生命再生增加 10
   生命星云2:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/5/53/Regeneration
+    tooltip: 每秒生命再生增加 20
   生命星云3:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/5/53/Regeneration
+    tooltip: 每秒生命再生增加 30
   魔力星云:
     isBuff: true
     attributes:
       manaRegen: 10
+    tooltip: 每层使每秒魔力再生增加 10
   魔力星云1:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/7/77/Mana_Regeneration
+    tooltip: 每秒魔力再生增加 10
   魔力星云2:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/7/77/Mana_Regeneration
+    tooltip: 每秒魔力再生增加 20
   魔力星云3:
     icon: https://static.wikia.nocookie.net/terraria_gamepedia/images/7/77/Mana_Regeneration
+    tooltip: 每秒魔力再生增加 30
