--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
@@ -359,8 +359,6 @@
         - "铜币:25000:25000:1"
 世界吞噬者:
     drop:
-        - "恶魔矿:2:5:0.5"
-        - "暗影鳞片:2:3:0.5"
         - "铜币:500:800:1"
 骷髅王:
     buffInflict:
@@ -385,12 +383,6 @@
         - "流血|100|0.5"
     buffImmute:
         - "中毒"
-极地之灵:
-    buffInflict:
-        - "霜火|100|1"
-        - "冷冻|50|1"
-    buffImmute:
-        - "霜火"
 血肉之墙:
     drop:
         - "强效治疗药水:2:4:1"
@@ -402,6 +394,18 @@
     drop:
         - "强效治疗药水:5:15:1"
         - "铜币:50000:50000:1"
+极地之灵:
+    buffInflict:
+        - "霜火|100|1"
+        - "冷冻|50|1"
+    buffImmute:
+        - "霜火"
+硫磺火元素:
+    buffInflict:
+        - "硫磺火|100|1"
+    buffImmute:
+        - "燃烧"
+        - "硫磺火"
 骷髅王左手:
     buffInflict:
         - "缓慢|100|0.33"
