--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
@@ -192,44 +192,41 @@
     penetration: 99999
     gravity: 0
     blockHitAction: thru
-    trailColor: 255|0|0
-    trailLingerTime: 2
     buffInflict:
         - "燃烧|80|1"
 诅咒激光:
     penetration: 99999
     gravity: 0
     blockHitAction: thru
-    trailColor: 100|255|100
-    trailLingerTime: 2
     buffInflict:
         - "咒火|60|1"
 电击激光:
     penetration: 99999
     gravity: 0
     blockHitAction: thru
-    trailColor: 100|255|255
-    trailLingerTime: 2
     buffInflict:
         - "带电|40|1"
 硫火飞弹:
     penetration: 99999
-    gravity: 0
     blockHitAction: thru
+    liveTime: 100
+    gravity: 0
     buffInflict:
         - "硫磺火|60|1"
 炼狱硫火球:
     penetration: 99999
+    liveTime: 60
     gravity: 0
-    isGrenade: false
+    isGrenade: true
     blastRadius: 2
     blastDuration: 50
     buffInflict:
         - "硫磺火|100|1"
 深渊亡魂:
     penetration: 99999
-    gravity: 0
     blockHitAction: thru
+    liveTime: 80
+    gravity: 0
     projectileSize: 0.75
     buffInflict:
         - "硫磺火|60|1"
