calamitas and some debugging

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
@@ -368,6 +368,18 @@
         - "剧毒"
     drop:
         - "铜币:30000:30000:1"
+骷髅王左手:
+    buffInflict:
+        - "缓慢|100|0.33"
+    buffImmute:
+        - "咒火"
+        - "剧毒"
+骷髅王右手:
+    buffInflict:
+        - "缓慢|100|0.33"
+    buffImmute:
+        - "咒火"
+        - "剧毒"
 血化史莱姆:
     buffInflict:
         - "扭曲|100|0.5"
@@ -386,10 +398,6 @@
 血肉之墙:
     drop:
         - "强效治疗药水:2:4:1"
-飞龙:
-    drop:
-        - "铜币:20000:30000:1"
-        - "飞翔之魂:10:20:1"
 史莱姆皇后:
     drop:
         - "强效治疗药水:5:15:1"
@@ -406,12 +414,24 @@
     buffImmute:
         - "燃烧"
         - "硫磺火"
-骷髅王左手:
+灾厄之眼:
     buffInflict:
-        - "缓慢|100|0.33"
+        - "硫磺火|100|1"
     buffImmute:
-        - "咒火"
-        - "剧毒"
+        - "燃烧"
+        - "硫磺火"
+灾难:
+    buffInflict:
+        - "硫磺火|80|1"
+    buffImmute:
+        - "燃烧"
+        - "硫磺火"
+灾祸:
+    buffInflict:
+        - "硫磺火|80|1"
+    buffImmute:
+        - "燃烧"
+        - "硫磺火"
 拜月教邪教徒:
     drop:
         - "强效治疗药水:5:15:1"
@@ -424,6 +444,10 @@
         - "咒火"
         - "燃烧"
     soundKilled: "ENTITY.CLTST.DEATH"
+飞龙:
+    drop:
+        - "铜币:20000:30000:1"
+        - "飞翔之魂:10:20:1"
 日耀柱:
     buffImmute:
         - "中毒"
