--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
@@ -208,6 +208,9 @@
     blockHitAction: thru
     buffInflict:
         - "带电|40|1"
+咒火球:
+    buffInflict:
+        - "咒火|100|1"
 硫火飞弹:
     penetration: 99999
     blockHitAction: thru
@@ -215,6 +218,7 @@
     gravity: 0
     buffInflict:
         - "硫磺火|60|1"
+        - "孱弱巫咒|40|1"
 炼狱硫火球:
     penetration: 99999
     liveTime: 60
@@ -230,6 +234,37 @@
     liveTime: 80
     gravity: 0
     projectileSize: 0.75
+    buffInflict:
+        - "硫磺火|60|1"
+无际裂变:
+    penetration: 99999
+    blockHitAction: thru
+    gravity: 0
+    projectileSize: 1
+    speedMultiPerTick: 0.975
+    autoTrace: true
+    autoTraceMethod: 2
+    autoTraceRadius: 32
+    autoTraceSharpTurning: false
+    autoTraceAbility: 0.1
+    buffInflict:
+        - "硫磺火|60|1"
+        - "孱弱巫咒|60|1"
+硫磺火球:
+    penetration: 99999
+    blockHitAction: thru
+    liveTime: 80
+    gravity: 0
+    buffInflict:
+        - "硫磺火|60|1"
+硫火喷射:
+    penetration: 99999
+    blockHitAction: thru
+    liveTime: 40
+    gravity: 0
+    projectileSize: 0.5
+    trailColor: 160|255|160
+    trailLingerTime: 10
     buffInflict:
         - "硫磺火|60|1"
 天蓝羽毛:
@@ -449,9 +484,6 @@
 小火花:
     buffInflict:
         - "燃烧|100|0.3"
-咒火球:
-    buffInflict:
-        - "咒火|600|1"
 孢子球:
     blastRadius: 1.5
     autoTrace: true
