--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/plugin_development/TerrariaHelper/pom.xml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/plugin_development/TerrariaHelper/pom.xml
@@ -59,6 +59,13 @@
             <systemPath>${project.basedir}/libsdisguises/LibsDisguises-10.0.31-Free.jar</systemPath>
         </dependency>
         <dependency>
+            <groupId>com.comphenix</groupId>
+            <artifactId>ProtocolLib</artifactId>
+            <version>4.4.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/protocollib/ProtocolLib.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
             <version>2.10.0</version>
