damage handling refractor; plantera attribute

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
@@ -432,6 +432,12 @@
     buffImmute:
         - "燃烧"
         - "硫磺火"
+世纪之花:
+    buffInflict:
+        - "中毒|200|1"
+    buffImmute:
+        - "中毒"
+        - "剧毒"
 拜月教邪教徒:
     drop:
         - "强效治疗药水:5:15:1"
