--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
@@ -533,6 +533,7 @@
         amount: 3
         damageMulti: 0.6
         name: 孢子云
+        fireOnTimeout: false
         velocity: 0.35
 投矛:
     buffInflict:
