--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
@@ -438,6 +438,15 @@
     buffImmute:
         - "中毒"
         - "剧毒"
+阿娜希塔:
+    buffImmute:
+        - "霜火"
+利维坦:
+    buffInflict:
+        - "流血|200|1"
+深海吞食者:
+    buffInflict:
+        - "流血|80|1"
 拜月教邪教徒:
     drop:
         - "强效治疗药水:5:15:1"
